// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`xy_expression XYChart component it renders area 1`] = `
<Chart
  renderer="canvas"
>
  <Connect(spec)
    legendPosition="top"
    rotation={0}
    showLegend={false}
    showLegendDisplayValue={false}
    theme={
      Object {
        "areaSeriesStyle": Object {
          "area": Object {
            "opacity": 0.3,
          },
          "line": Object {
            "strokeWidth": 2,
          },
          "point": Object {
            "fill": "rgba(255, 255, 255, 1)",
            "radius": 3,
            "strokeWidth": 2,
            "visible": false,
          },
        },
        "axes": Object {
          "axisLineStyle": Object {
            "stroke": "rgba(239, 241, 244, 1)",
          },
          "axisTitleStyle": Object {
            "fill": "rgba(52, 55, 65, 1)",
            "fontFamily": "'Inter UI', -apple-system, BlinkMacSystemFont,
  'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'",
            "fontSize": 12,
            "padding": 10,
          },
          "gridLineStyle": Object {
            "horizontal": Object {
              "dash": Array [
                0,
                0,
              ],
              "opacity": 1,
              "stroke": "rgba(239, 241, 244, 1)",
              "strokeWidth": 1,
              "visible": true,
            },
            "vertical": Object {
              "dash": Array [
                4,
                4,
              ],
              "opacity": 1,
              "stroke": "rgba(239, 241, 244, 1)",
              "strokeWidth": 1,
              "visible": true,
            },
          },
          "tickLabelStyle": Object {
            "fill": "rgba(105, 112, 125, 1)",
            "fontFamily": "'Inter UI', -apple-system, BlinkMacSystemFont,
  'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'",
            "fontSize": 10,
            "padding": 8,
          },
          "tickLineStyle": Object {
            "stroke": "rgba(239, 241, 244, 1)",
            "strokeWidth": 1,
            "visible": false,
          },
        },
        "barSeriesStyle": Object {
          "displayValue": Object {
            "fill": "rgba(105, 112, 125, 1)",
            "fontFamily": "'Inter UI', -apple-system, BlinkMacSystemFont,
  'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'",
            "fontSize": 8,
          },
        },
        "chartMargins": Object {
          "bottom": 0,
          "left": 0,
          "right": 0,
          "top": 0,
        },
        "colors": Object {
          "defaultVizColor": "#6092C0",
          "vizColors": Array [
            "#54B399",
            "#6092C0",
            "#D36086",
            "#9170B8",
            "#CA8EAE",
            "#D6BF57",
            "#B9A888",
            "#DA8B45",
            "#AA6556",
            "#E7664C",
          ],
        },
        "crosshair": Object {
          "band": Object {
            "fill": "rgba(245, 247, 250, 1)",
          },
          "line": Object {
            "dash": Array [
              4,
              4,
            ],
            "stroke": "rgba(105, 112, 125, 1)",
            "strokeWidth": 1,
          },
        },
        "lineSeriesStyle": Object {
          "line": Object {
            "strokeWidth": 2,
          },
          "point": Object {
            "fill": "rgba(255, 255, 255, 1)",
            "radius": 3,
            "strokeWidth": 2,
          },
        },
        "scales": Object {
          "barsPadding": 0.25,
          "histogramPadding": 0.05,
        },
      }
    }
  />
  <Connect(spec)
    id="x"
    position="bottom"
    showGridLines={false}
    tickFormat={[Function]}
    title="c"
  />
  <Connect(spec)
    id="y"
    position="left"
    showGridLines={false}
    tickFormat={[Function]}
    title=""
  />
  <Connect(spec)
    data={
      Array [
        Object {
          "Label A": 1,
          "Label B": 2,
          "Label D": "Foo",
          "c": "I",
          "d": "Foo",
        },
        Object {
          "Label A": 1,
          "Label B": 5,
          "Label D": "Bar",
          "c": "J",
          "d": "Bar",
        },
      ]
    }
    enableHistogramMode={false}
    id="Label D"
    key="0"
    splitSeriesAccessors={
      Array [
        "d",
      ]
    }
    stackAccessors={Array []}
    timeZone="UTC"
    xAccessor="c"
    xScaleType="ordinal"
    yAccessors={
      Array [
        "Label A",
        "Label B",
      ]
    }
    yScaleType="linear"
  />
</Chart>
`;

exports[`xy_expression XYChart component it renders bar 1`] = `
<Chart
  renderer="canvas"
>
  <Connect(spec)
    legendPosition="top"
    rotation={0}
    showLegend={false}
    showLegendDisplayValue={false}
    theme={
      Object {
        "areaSeriesStyle": Object {
          "area": Object {
            "opacity": 0.3,
          },
          "line": Object {
            "strokeWidth": 2,
          },
          "point": Object {
            "fill": "rgba(255, 255, 255, 1)",
            "radius": 3,
            "strokeWidth": 2,
            "visible": false,
          },
        },
        "axes": Object {
          "axisLineStyle": Object {
            "stroke": "rgba(239, 241, 244, 1)",
          },
          "axisTitleStyle": Object {
            "fill": "rgba(52, 55, 65, 1)",
            "fontFamily": "'Inter UI', -apple-system, BlinkMacSystemFont,
  'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'",
            "fontSize": 12,
            "padding": 10,
          },
          "gridLineStyle": Object {
            "horizontal": Object {
              "dash": Array [
                0,
                0,
              ],
              "opacity": 1,
              "stroke": "rgba(239, 241, 244, 1)",
              "strokeWidth": 1,
              "visible": true,
            },
            "vertical": Object {
              "dash": Array [
                4,
                4,
              ],
              "opacity": 1,
              "stroke": "rgba(239, 241, 244, 1)",
              "strokeWidth": 1,
              "visible": true,
            },
          },
          "tickLabelStyle": Object {
            "fill": "rgba(105, 112, 125, 1)",
            "fontFamily": "'Inter UI', -apple-system, BlinkMacSystemFont,
  'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'",
            "fontSize": 10,
            "padding": 8,
          },
          "tickLineStyle": Object {
            "stroke": "rgba(239, 241, 244, 1)",
            "strokeWidth": 1,
            "visible": false,
          },
        },
        "barSeriesStyle": Object {
          "displayValue": Object {
            "fill": "rgba(105, 112, 125, 1)",
            "fontFamily": "'Inter UI', -apple-system, BlinkMacSystemFont,
  'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'",
            "fontSize": 8,
          },
        },
        "chartMargins": Object {
          "bottom": 0,
          "left": 0,
          "right": 0,
          "top": 0,
        },
        "colors": Object {
          "defaultVizColor": "#6092C0",
          "vizColors": Array [
            "#54B399",
            "#6092C0",
            "#D36086",
            "#9170B8",
            "#CA8EAE",
            "#D6BF57",
            "#B9A888",
            "#DA8B45",
            "#AA6556",
            "#E7664C",
          ],
        },
        "crosshair": Object {
          "band": Object {
            "fill": "rgba(245, 247, 250, 1)",
          },
          "line": Object {
            "dash": Array [
              4,
              4,
            ],
            "stroke": "rgba(105, 112, 125, 1)",
            "strokeWidth": 1,
          },
        },
        "lineSeriesStyle": Object {
          "line": Object {
            "strokeWidth": 2,
          },
          "point": Object {
            "fill": "rgba(255, 255, 255, 1)",
            "radius": 3,
            "strokeWidth": 2,
          },
        },
        "scales": Object {
          "barsPadding": 0.25,
          "histogramPadding": 0.05,
        },
      }
    }
  />
  <Connect(spec)
    id="x"
    position="bottom"
    showGridLines={false}
    tickFormat={[Function]}
    title="c"
  />
  <Connect(spec)
    id="y"
    position="left"
    showGridLines={false}
    tickFormat={[Function]}
    title=""
  />
  <Connect(spec)
    data={
      Array [
        Object {
          "Label A": 1,
          "Label B": 2,
          "Label D": "Foo",
          "c": "I",
          "d": "Foo",
        },
        Object {
          "Label A": 1,
          "Label B": 5,
          "Label D": "Bar",
          "c": "J",
          "d": "Bar",
        },
      ]
    }
    enableHistogramMode={false}
    id="Label D"
    key="0"
    splitSeriesAccessors={
      Array [
        "d",
      ]
    }
    stackAccessors={Array []}
    timeZone="UTC"
    xAccessor="c"
    xScaleType="ordinal"
    yAccessors={
      Array [
        "Label A",
        "Label B",
      ]
    }
    yScaleType="linear"
  />
</Chart>
`;

exports[`xy_expression XYChart component it renders horizontal bar 1`] = `
<Chart
  renderer="canvas"
>
  <Connect(spec)
    legendPosition="top"
    rotation={90}
    showLegend={false}
    showLegendDisplayValue={false}
    theme={
      Object {
        "areaSeriesStyle": Object {
          "area": Object {
            "opacity": 0.3,
          },
          "line": Object {
            "strokeWidth": 2,
          },
          "point": Object {
            "fill": "rgba(255, 255, 255, 1)",
            "radius": 3,
            "strokeWidth": 2,
            "visible": false,
          },
        },
        "axes": Object {
          "axisLineStyle": Object {
            "stroke": "rgba(239, 241, 244, 1)",
          },
          "axisTitleStyle": Object {
            "fill": "rgba(52, 55, 65, 1)",
            "fontFamily": "'Inter UI', -apple-system, BlinkMacSystemFont,
  'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'",
            "fontSize": 12,
            "padding": 10,
          },
          "gridLineStyle": Object {
            "horizontal": Object {
              "dash": Array [
                0,
                0,
              ],
              "opacity": 1,
              "stroke": "rgba(239, 241, 244, 1)",
              "strokeWidth": 1,
              "visible": true,
            },
            "vertical": Object {
              "dash": Array [
                4,
                4,
              ],
              "opacity": 1,
              "stroke": "rgba(239, 241, 244, 1)",
              "strokeWidth": 1,
              "visible": true,
            },
          },
          "tickLabelStyle": Object {
            "fill": "rgba(105, 112, 125, 1)",
            "fontFamily": "'Inter UI', -apple-system, BlinkMacSystemFont,
  'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'",
            "fontSize": 10,
            "padding": 8,
          },
          "tickLineStyle": Object {
            "stroke": "rgba(239, 241, 244, 1)",
            "strokeWidth": 1,
            "visible": false,
          },
        },
        "barSeriesStyle": Object {
          "displayValue": Object {
            "fill": "rgba(105, 112, 125, 1)",
            "fontFamily": "'Inter UI', -apple-system, BlinkMacSystemFont,
  'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'",
            "fontSize": 8,
          },
        },
        "chartMargins": Object {
          "bottom": 0,
          "left": 0,
          "right": 0,
          "top": 0,
        },
        "colors": Object {
          "defaultVizColor": "#6092C0",
          "vizColors": Array [
            "#54B399",
            "#6092C0",
            "#D36086",
            "#9170B8",
            "#CA8EAE",
            "#D6BF57",
            "#B9A888",
            "#DA8B45",
            "#AA6556",
            "#E7664C",
          ],
        },
        "crosshair": Object {
          "band": Object {
            "fill": "rgba(245, 247, 250, 1)",
          },
          "line": Object {
            "dash": Array [
              4,
              4,
            ],
            "stroke": "rgba(105, 112, 125, 1)",
            "strokeWidth": 1,
          },
        },
        "lineSeriesStyle": Object {
          "line": Object {
            "strokeWidth": 2,
          },
          "point": Object {
            "fill": "rgba(255, 255, 255, 1)",
            "radius": 3,
            "strokeWidth": 2,
          },
        },
        "scales": Object {
          "barsPadding": 0.25,
          "histogramPadding": 0.05,
        },
      }
    }
  />
  <Connect(spec)
    id="x"
    position="left"
    showGridLines={false}
    tickFormat={[Function]}
    title="c"
  />
  <Connect(spec)
    id="y"
    position="bottom"
    showGridLines={false}
    tickFormat={[Function]}
    title=""
  />
  <Connect(spec)
    data={
      Array [
        Object {
          "Label A": 1,
          "Label B": 2,
          "Label D": "Foo",
          "c": "I",
          "d": "Foo",
        },
        Object {
          "Label A": 1,
          "Label B": 5,
          "Label D": "Bar",
          "c": "J",
          "d": "Bar",
        },
      ]
    }
    enableHistogramMode={false}
    id="Label D"
    key="0"
    splitSeriesAccessors={
      Array [
        "d",
      ]
    }
    stackAccessors={Array []}
    timeZone="UTC"
    xAccessor="c"
    xScaleType="ordinal"
    yAccessors={
      Array [
        "Label A",
        "Label B",
      ]
    }
    yScaleType="linear"
  />
</Chart>
`;

exports[`xy_expression XYChart component it renders line 1`] = `
<Chart
  renderer="canvas"
>
  <Connect(spec)
    legendPosition="top"
    rotation={0}
    showLegend={false}
    showLegendDisplayValue={false}
    theme={
      Object {
        "areaSeriesStyle": Object {
          "area": Object {
            "opacity": 0.3,
          },
          "line": Object {
            "strokeWidth": 2,
          },
          "point": Object {
            "fill": "rgba(255, 255, 255, 1)",
            "radius": 3,
            "strokeWidth": 2,
            "visible": false,
          },
        },
        "axes": Object {
          "axisLineStyle": Object {
            "stroke": "rgba(239, 241, 244, 1)",
          },
          "axisTitleStyle": Object {
            "fill": "rgba(52, 55, 65, 1)",
            "fontFamily": "'Inter UI', -apple-system, BlinkMacSystemFont,
  'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'",
            "fontSize": 12,
            "padding": 10,
          },
          "gridLineStyle": Object {
            "horizontal": Object {
              "dash": Array [
                0,
                0,
              ],
              "opacity": 1,
              "stroke": "rgba(239, 241, 244, 1)",
              "strokeWidth": 1,
              "visible": true,
            },
            "vertical": Object {
              "dash": Array [
                4,
                4,
              ],
              "opacity": 1,
              "stroke": "rgba(239, 241, 244, 1)",
              "strokeWidth": 1,
              "visible": true,
            },
          },
          "tickLabelStyle": Object {
            "fill": "rgba(105, 112, 125, 1)",
            "fontFamily": "'Inter UI', -apple-system, BlinkMacSystemFont,
  'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'",
            "fontSize": 10,
            "padding": 8,
          },
          "tickLineStyle": Object {
            "stroke": "rgba(239, 241, 244, 1)",
            "strokeWidth": 1,
            "visible": false,
          },
        },
        "barSeriesStyle": Object {
          "displayValue": Object {
            "fill": "rgba(105, 112, 125, 1)",
            "fontFamily": "'Inter UI', -apple-system, BlinkMacSystemFont,
  'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'",
            "fontSize": 8,
          },
        },
        "chartMargins": Object {
          "bottom": 0,
          "left": 0,
          "right": 0,
          "top": 0,
        },
        "colors": Object {
          "defaultVizColor": "#6092C0",
          "vizColors": Array [
            "#54B399",
            "#6092C0",
            "#D36086",
            "#9170B8",
            "#CA8EAE",
            "#D6BF57",
            "#B9A888",
            "#DA8B45",
            "#AA6556",
            "#E7664C",
          ],
        },
        "crosshair": Object {
          "band": Object {
            "fill": "rgba(245, 247, 250, 1)",
          },
          "line": Object {
            "dash": Array [
              4,
              4,
            ],
            "stroke": "rgba(105, 112, 125, 1)",
            "strokeWidth": 1,
          },
        },
        "lineSeriesStyle": Object {
          "line": Object {
            "strokeWidth": 2,
          },
          "point": Object {
            "fill": "rgba(255, 255, 255, 1)",
            "radius": 3,
            "strokeWidth": 2,
          },
        },
        "scales": Object {
          "barsPadding": 0.25,
          "histogramPadding": 0.05,
        },
      }
    }
  />
  <Connect(spec)
    id="x"
    position="bottom"
    showGridLines={false}
    tickFormat={[Function]}
    title="c"
  />
  <Connect(spec)
    id="y"
    position="left"
    showGridLines={false}
    tickFormat={[Function]}
    title=""
  />
  <Connect(spec)
    data={
      Array [
        Object {
          "Label A": 1,
          "Label B": 2,
          "Label D": "Foo",
          "c": "I",
          "d": "Foo",
        },
        Object {
          "Label A": 1,
          "Label B": 5,
          "Label D": "Bar",
          "c": "J",
          "d": "Bar",
        },
      ]
    }
    enableHistogramMode={false}
    id="Label D"
    key="0"
    splitSeriesAccessors={
      Array [
        "d",
      ]
    }
    stackAccessors={Array []}
    timeZone="UTC"
    xAccessor="c"
    xScaleType="ordinal"
    yAccessors={
      Array [
        "Label A",
        "Label B",
      ]
    }
    yScaleType="linear"
  />
</Chart>
`;

exports[`xy_expression XYChart component it renders stacked area 1`] = `
<Chart
  renderer="canvas"
>
  <Connect(spec)
    legendPosition="top"
    rotation={0}
    showLegend={false}
    showLegendDisplayValue={false}
    theme={
      Object {
        "areaSeriesStyle": Object {
          "area": Object {
            "opacity": 0.3,
          },
          "line": Object {
            "strokeWidth": 2,
          },
          "point": Object {
            "fill": "rgba(255, 255, 255, 1)",
            "radius": 3,
            "strokeWidth": 2,
            "visible": false,
          },
        },
        "axes": Object {
          "axisLineStyle": Object {
            "stroke": "rgba(239, 241, 244, 1)",
          },
          "axisTitleStyle": Object {
            "fill": "rgba(52, 55, 65, 1)",
            "fontFamily": "'Inter UI', -apple-system, BlinkMacSystemFont,
  'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'",
            "fontSize": 12,
            "padding": 10,
          },
          "gridLineStyle": Object {
            "horizontal": Object {
              "dash": Array [
                0,
                0,
              ],
              "opacity": 1,
              "stroke": "rgba(239, 241, 244, 1)",
              "strokeWidth": 1,
              "visible": true,
            },
            "vertical": Object {
              "dash": Array [
                4,
                4,
              ],
              "opacity": 1,
              "stroke": "rgba(239, 241, 244, 1)",
              "strokeWidth": 1,
              "visible": true,
            },
          },
          "tickLabelStyle": Object {
            "fill": "rgba(105, 112, 125, 1)",
            "fontFamily": "'Inter UI', -apple-system, BlinkMacSystemFont,
  'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'",
            "fontSize": 10,
            "padding": 8,
          },
          "tickLineStyle": Object {
            "stroke": "rgba(239, 241, 244, 1)",
            "strokeWidth": 1,
            "visible": false,
          },
        },
        "barSeriesStyle": Object {
          "displayValue": Object {
            "fill": "rgba(105, 112, 125, 1)",
            "fontFamily": "'Inter UI', -apple-system, BlinkMacSystemFont,
  'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'",
            "fontSize": 8,
          },
        },
        "chartMargins": Object {
          "bottom": 0,
          "left": 0,
          "right": 0,
          "top": 0,
        },
        "colors": Object {
          "defaultVizColor": "#6092C0",
          "vizColors": Array [
            "#54B399",
            "#6092C0",
            "#D36086",
            "#9170B8",
            "#CA8EAE",
            "#D6BF57",
            "#B9A888",
            "#DA8B45",
            "#AA6556",
            "#E7664C",
          ],
        },
        "crosshair": Object {
          "band": Object {
            "fill": "rgba(245, 247, 250, 1)",
          },
          "line": Object {
            "dash": Array [
              4,
              4,
            ],
            "stroke": "rgba(105, 112, 125, 1)",
            "strokeWidth": 1,
          },
        },
        "lineSeriesStyle": Object {
          "line": Object {
            "strokeWidth": 2,
          },
          "point": Object {
            "fill": "rgba(255, 255, 255, 1)",
            "radius": 3,
            "strokeWidth": 2,
          },
        },
        "scales": Object {
          "barsPadding": 0.25,
          "histogramPadding": 0.05,
        },
      }
    }
  />
  <Connect(spec)
    id="x"
    position="bottom"
    showGridLines={false}
    tickFormat={[Function]}
    title="c"
  />
  <Connect(spec)
    id="y"
    position="left"
    showGridLines={false}
    tickFormat={[Function]}
    title=""
  />
  <Connect(spec)
    data={
      Array [
        Object {
          "Label A": 1,
          "Label B": 2,
          "Label D": "Foo",
          "c": "I",
          "d": "Foo",
        },
        Object {
          "Label A": 1,
          "Label B": 5,
          "Label D": "Bar",
          "c": "J",
          "d": "Bar",
        },
      ]
    }
    enableHistogramMode={false}
    id="Label D"
    key="0"
    splitSeriesAccessors={
      Array [
        "d",
      ]
    }
    stackAccessors={
      Array [
        "c",
      ]
    }
    timeZone="UTC"
    xAccessor="c"
    xScaleType="ordinal"
    yAccessors={
      Array [
        "Label A",
        "Label B",
      ]
    }
    yScaleType="linear"
  />
</Chart>
`;

exports[`xy_expression XYChart component it renders stacked bar 1`] = `
<Chart
  renderer="canvas"
>
  <Connect(spec)
    legendPosition="top"
    rotation={0}
    showLegend={false}
    showLegendDisplayValue={false}
    theme={
      Object {
        "areaSeriesStyle": Object {
          "area": Object {
            "opacity": 0.3,
          },
          "line": Object {
            "strokeWidth": 2,
          },
          "point": Object {
            "fill": "rgba(255, 255, 255, 1)",
            "radius": 3,
            "strokeWidth": 2,
            "visible": false,
          },
        },
        "axes": Object {
          "axisLineStyle": Object {
            "stroke": "rgba(239, 241, 244, 1)",
          },
          "axisTitleStyle": Object {
            "fill": "rgba(52, 55, 65, 1)",
            "fontFamily": "'Inter UI', -apple-system, BlinkMacSystemFont,
  'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'",
            "fontSize": 12,
            "padding": 10,
          },
          "gridLineStyle": Object {
            "horizontal": Object {
              "dash": Array [
                0,
                0,
              ],
              "opacity": 1,
              "stroke": "rgba(239, 241, 244, 1)",
              "strokeWidth": 1,
              "visible": true,
            },
            "vertical": Object {
              "dash": Array [
                4,
                4,
              ],
              "opacity": 1,
              "stroke": "rgba(239, 241, 244, 1)",
              "strokeWidth": 1,
              "visible": true,
            },
          },
          "tickLabelStyle": Object {
            "fill": "rgba(105, 112, 125, 1)",
            "fontFamily": "'Inter UI', -apple-system, BlinkMacSystemFont,
  'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'",
            "fontSize": 10,
            "padding": 8,
          },
          "tickLineStyle": Object {
            "stroke": "rgba(239, 241, 244, 1)",
            "strokeWidth": 1,
            "visible": false,
          },
        },
        "barSeriesStyle": Object {
          "displayValue": Object {
            "fill": "rgba(105, 112, 125, 1)",
            "fontFamily": "'Inter UI', -apple-system, BlinkMacSystemFont,
  'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'",
            "fontSize": 8,
          },
        },
        "chartMargins": Object {
          "bottom": 0,
          "left": 0,
          "right": 0,
          "top": 0,
        },
        "colors": Object {
          "defaultVizColor": "#6092C0",
          "vizColors": Array [
            "#54B399",
            "#6092C0",
            "#D36086",
            "#9170B8",
            "#CA8EAE",
            "#D6BF57",
            "#B9A888",
            "#DA8B45",
            "#AA6556",
            "#E7664C",
          ],
        },
        "crosshair": Object {
          "band": Object {
            "fill": "rgba(245, 247, 250, 1)",
          },
          "line": Object {
            "dash": Array [
              4,
              4,
            ],
            "stroke": "rgba(105, 112, 125, 1)",
            "strokeWidth": 1,
          },
        },
        "lineSeriesStyle": Object {
          "line": Object {
            "strokeWidth": 2,
          },
          "point": Object {
            "fill": "rgba(255, 255, 255, 1)",
            "radius": 3,
            "strokeWidth": 2,
          },
        },
        "scales": Object {
          "barsPadding": 0.25,
          "histogramPadding": 0.05,
        },
      }
    }
  />
  <Connect(spec)
    id="x"
    position="bottom"
    showGridLines={false}
    tickFormat={[Function]}
    title="c"
  />
  <Connect(spec)
    id="y"
    position="left"
    showGridLines={false}
    tickFormat={[Function]}
    title=""
  />
  <Connect(spec)
    data={
      Array [
        Object {
          "Label A": 1,
          "Label B": 2,
          "Label D": "Foo",
          "c": "I",
          "d": "Foo",
        },
        Object {
          "Label A": 1,
          "Label B": 5,
          "Label D": "Bar",
          "c": "J",
          "d": "Bar",
        },
      ]
    }
    enableHistogramMode={false}
    id="Label D"
    key="0"
    splitSeriesAccessors={
      Array [
        "d",
      ]
    }
    stackAccessors={
      Array [
        "c",
      ]
    }
    timeZone="UTC"
    xAccessor="c"
    xScaleType="ordinal"
    yAccessors={
      Array [
        "Label A",
        "Label B",
      ]
    }
    yScaleType="linear"
  />
</Chart>
`;

exports[`xy_expression XYChart component it renders stacked horizontal bar 1`] = `
<Chart
  renderer="canvas"
>
  <Connect(spec)
    legendPosition="top"
    rotation={90}
    showLegend={false}
    showLegendDisplayValue={false}
    theme={
      Object {
        "areaSeriesStyle": Object {
          "area": Object {
            "opacity": 0.3,
          },
          "line": Object {
            "strokeWidth": 2,
          },
          "point": Object {
            "fill": "rgba(255, 255, 255, 1)",
            "radius": 3,
            "strokeWidth": 2,
            "visible": false,
          },
        },
        "axes": Object {
          "axisLineStyle": Object {
            "stroke": "rgba(239, 241, 244, 1)",
          },
          "axisTitleStyle": Object {
            "fill": "rgba(52, 55, 65, 1)",
            "fontFamily": "'Inter UI', -apple-system, BlinkMacSystemFont,
  'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'",
            "fontSize": 12,
            "padding": 10,
          },
          "gridLineStyle": Object {
            "horizontal": Object {
              "dash": Array [
                0,
                0,
              ],
              "opacity": 1,
              "stroke": "rgba(239, 241, 244, 1)",
              "strokeWidth": 1,
              "visible": true,
            },
            "vertical": Object {
              "dash": Array [
                4,
                4,
              ],
              "opacity": 1,
              "stroke": "rgba(239, 241, 244, 1)",
              "strokeWidth": 1,
              "visible": true,
            },
          },
          "tickLabelStyle": Object {
            "fill": "rgba(105, 112, 125, 1)",
            "fontFamily": "'Inter UI', -apple-system, BlinkMacSystemFont,
  'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'",
            "fontSize": 10,
            "padding": 8,
          },
          "tickLineStyle": Object {
            "stroke": "rgba(239, 241, 244, 1)",
            "strokeWidth": 1,
            "visible": false,
          },
        },
        "barSeriesStyle": Object {
          "displayValue": Object {
            "fill": "rgba(105, 112, 125, 1)",
            "fontFamily": "'Inter UI', -apple-system, BlinkMacSystemFont,
  'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'",
            "fontSize": 8,
          },
        },
        "chartMargins": Object {
          "bottom": 0,
          "left": 0,
          "right": 0,
          "top": 0,
        },
        "colors": Object {
          "defaultVizColor": "#6092C0",
          "vizColors": Array [
            "#54B399",
            "#6092C0",
            "#D36086",
            "#9170B8",
            "#CA8EAE",
            "#D6BF57",
            "#B9A888",
            "#DA8B45",
            "#AA6556",
            "#E7664C",
          ],
        },
        "crosshair": Object {
          "band": Object {
            "fill": "rgba(245, 247, 250, 1)",
          },
          "line": Object {
            "dash": Array [
              4,
              4,
            ],
            "stroke": "rgba(105, 112, 125, 1)",
            "strokeWidth": 1,
          },
        },
        "lineSeriesStyle": Object {
          "line": Object {
            "strokeWidth": 2,
          },
          "point": Object {
            "fill": "rgba(255, 255, 255, 1)",
            "radius": 3,
            "strokeWidth": 2,
          },
        },
        "scales": Object {
          "barsPadding": 0.25,
          "histogramPadding": 0.05,
        },
      }
    }
  />
  <Connect(spec)
    id="x"
    position="left"
    showGridLines={false}
    tickFormat={[Function]}
    title="c"
  />
  <Connect(spec)
    id="y"
    position="bottom"
    showGridLines={false}
    tickFormat={[Function]}
    title=""
  />
  <Connect(spec)
    data={
      Array [
        Object {
          "Label A": 1,
          "Label B": 2,
          "Label D": "Foo",
          "c": "I",
          "d": "Foo",
        },
        Object {
          "Label A": 1,
          "Label B": 5,
          "Label D": "Bar",
          "c": "J",
          "d": "Bar",
        },
      ]
    }
    enableHistogramMode={false}
    id="Label D"
    key="0"
    splitSeriesAccessors={
      Array [
        "d",
      ]
    }
    stackAccessors={
      Array [
        "c",
      ]
    }
    timeZone="UTC"
    xAccessor="c"
    xScaleType="ordinal"
    yAccessors={
      Array [
        "Label A",
        "Label B",
      ]
    }
    yScaleType="linear"
  />
</Chart>
`;
